--- a/3_asteroids/pom.xml
+++ b/3_asteroids/pom.xml
@@ -152,7 +152,11 @@
             <artifactId>junit-jupiter-params</artifactId>
             <version>5.8.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10</version>
+        </dependency>
         <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf</artifactId>
