--- a/3_asteroids/pom.xml
+++ b/3_asteroids/pom.xml
@@ -175,6 +175,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
     </dependencies>
 
 </project>
